[package]
name = "instrumenter"
version = "0.1.3"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Basic framework to allow collecting tracing data and hw counters on multithreaded applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/instrumenter-rs"

[lib]

[[bin]]
name = "analyzer"
path = "src/binaries/analyzer.rs"
required-features = ["analyzer"]

[dependencies]
dashmap = "6.0.1"
parking_lot = "0.12.3"
thread_local = "1.1.8"

# Tracing libraries
tracing = { version = "0.1.40", optional = true }
libc = { version = "0.2.155", optional = true }
serde = { version = "1.0.203", features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.118", optional = true }

# Analyzer libraries
human_format = { version = "1.1.0", optional = true }
structopt = { version = "0.3.26", optional = true }
plotters = { version = "0.3.6", optional = true }
papi-bindings = { version = "0.5.2", optional = true }
instrumenter-proc-macro = "0.1.1"

[features]
# Enabled triggers
enabled = ["tracing", "libc", "papi-bindings", "serde", "serde_json", "instrumenter-proc-macro/enabled"]
analyzer = ["human_format", "structopt", "plotters", "enabled"]
