[package]
name = "instrumenter-proc-macro"
version = "0.1.0"
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
categories = []
description = "Proc macros for instrumenter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Guilucand/instrumenter-rs"


[lib]
proc-macro = true


[dependencies]
proc-macro2 = { version = "1.0.46", optional = true }
quote = { version = "1.0.21", optional = true }
syn = { version = "1.0.102", features = ["full"], optional = true }

[features]
enabled = ["proc-macro2", "quote", "syn"]
